<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yundian-app</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="menu">菜单</string>
    <string name="leftmenu1">商品管理</string>
    <string name="leftmenu2">我的收入</string>
    <string name="leftmenu3">优惠劵</string>
    <string name="leftmenu4">会员卡</string>
    <string name="leftmenu5">会员充值</string>
    <string name="leftmenu6">挂单恢复</string>
    <string name="bt_buy">选好了</string>
    <string name="tv_order">已选商品</string>
    <string name="tv_orders">挂单</string>
    <string name="iv_clear">清空</string>
    <string name="register_phone">手机</string>
    <string name="register_password">密码</string>
    <string name="btn_register_phone">注册</string>

    <!-- 登录页 -->
    <string name="login_phone">手机号</string>
    <string name="login_password">密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="login_register">立即注册</string>
    <string name="btn_login">登录</string>
    <!-- 注册页 -->
    <string name="input_phone">请输入手机号</string>
    <string name="re_input_password">再次确认密码</string>
        <string name="title_activity_setting">设置</string>
    
    <string name="title_activity_consumption">收款</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_signin">注册</string>
    <string name="title_activity_forget">忘记密码</string>
    <string name="title_activity_addtype">增加种类</string>
    <string name="title_activity_addunits">增加单位</string>
    <string name="title_activity_add_goods">商品编辑</string>
    <string name="title_activity_my_income">我的收入</string>
    <string name="title_activity_orders_details">订单详情</string>
    <string name="title_activity_managegoods">管理商品</string>
    <string name="title_edit_goods">商品编辑</string>
    <string name="main_activity_message01">未选购任何商品</string>
    <string name="main_activity_message02">最大支付金额为999999.00元</string>
    <string name="main_activity_message03">单品选购数量不能超过999</string>
    <string name="main_activity_message04">确定全部清空？</string>
    <string name="main_activity_message05">快去商品管理界面增加商品吧！</string>
    <string name="main_activity_message06">选择商品为零，不能挂单！</string>
    <string name="main_activity_message07">挂单成功！</string>
    <string name="Manage_activity_message01">请勿在批量选择模式下新增商品</string>
    <string name="Consumption_activity_message01">未选购任何商品</string>
    <string name="Addtype_activity_message01">修改商品种类不能为空</string>
    <string name="Addtype_activity_message02">商品种类不能为空</string>
    <string name="Addtype_activity_message03">商品种类已存在</string>
    <string name="Addtype_activity_message04">该商品种类已经被使用，不能被删除</string>
    <string name="Addunits_activity_message01">修改商品单位不能为空</string>
    <string name="Addunits_activity_message02">商品单位不能为空</string>
    <string name="Addunits_activity_message03">商品单位已存在</string>
    <string name="Addunits_activity_message04">该商品单位已经被使用，不能被删除</string>
    <string name="addEdit_activity_message01">请将商品名称设置在1至8个字符之内</string>
    <string name="addEdit_activity_message02">请将商品规格设置在1至8个字符之内</string>
    <string name="addEdit_activity_message03">请将商品库存设置于0至999999之间</string>
    <string name="addEdit_activity_message04">请将商品零售价设置于0至999999.00元之间</string>
    <string name="addEdit_activity_message05">保存成功</string>
    <string name="addEdit_activity_message06">请设置商品分类</string>
    <string name="addEdit_activity_message07">请设置商品单位</string>
    <string name="Consumption_activity_message03">交易取消</string>
    <string name="Consumption_activity_message02">交易成功</string>
    <string name="Pay_method_cash">现金</string>
    <string name="Pay_method_bank">银行卡</string>
    <string name="Pay_method_WxZfb">微信/支付宝</string>
    <string name="title_activity_pending_order">PendingOrderActivity</string>
    <string name="myincome_income">收入额:</string>
    <string name="myincome_allincome">总收入</string>
    <string name="setting_signout">退出登录</string>
    <string name="income_mysales">订单号:</string>
    <string name="income_orderstate">支付状态</string>
    <string name="income_ordersmethod">收款方式</string>
    <string name="income_ordersdate">支付日期</string>
    <string name="income_ordersactualprice">金额</string>
    <string name="login_autologin">自动登录</string>
    <string name="login_rememberme">记住密码</string>
    <string name="verify_code">获取验证码</string>
    <string name="input_password">请输入6~16位密码</string>
    <string name="input_verify_code">请输入验证码</string>

</resources>