<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ra.market.LoginActivity" >

    <!-- 登录页 -->


    <!-- 顶部栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/UI_spacing20"
        android:layout_marginRight="@dimen/UI_spacing20"
        android:layout_marginTop="60dp"
        android:orientation="vertical" >

        <!-- 登录logo -->

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/silver_stone" />

        <!-- 手机号 -->

        <com.sssoft.Yundian.view.ClearEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/UI_spacing20"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/UI_spacing10"
            android:hint="@string/login_phone"
            android:maxLength="11"
            android:numeric="integer"
            android:singleLine="true"
            android:textColor="@color/UI_text_black" />

        <!-- 密码 -->

        <com.sssoft.Yundian.view.ClearEditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/UI_spacing10"
            android:drawableLeft="@drawable/pwd"
            android:drawablePadding="@dimen/UI_spacing10"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="@color/UI_text_black" />

        <!-- 记住帐号，自动登录 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/UI_spacing10"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_centerVertical="true"
                android:text="@string/login_rememberme"
                android:textColor="@color/UI_text_black" >
            </CheckBox>

            <CheckBox
                android:id="@+id/cb_auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="@string/login_autologin"
                android:textColor="@color/UI_text_black" />
        </RelativeLayout>

        <!-- 登录按钮 -->

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/UI_spacing40"
            android:layout_marginLeft="@dimen/UI_spacing20"
            android:layout_marginRight="@dimen/UI_spacing20"
            android:layout_marginTop="@dimen/UI_spacing10"
            android:background="@drawable/btn_background"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/UI_text_middle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_login"
            android:layout_marginLeft="@dimen/UI_spacing20"
            android:layout_marginRight="@dimen/UI_spacing20" >

            <!-- 忘记密码 -->

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/UI_spacing10"
                android:text="@string/forgot_password"
                android:textColor="@color/UI_text_gray"
                android:textSize="@dimen/UI_text_small" />

            <!-- 注册 -->

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/UI_spacing10"
                android:clickable="true"
                android:text="@string/login_register"
                android:textColor="@color/UI_text_gray"
                android:textSize="@dimen/UI_text_small" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>