<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_shopping_title"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_order"
            android:textColor="#FF9933"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_porder"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/u160"
            android:gravity="center"
            android:text="@string/tv_orders"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/iv_clear"
            android:gravity="end"
            android:src="@drawable/u152"
            android:text="@string/tv_orders" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_shopping_goods"
        android:layout_width="match_parent"
        android:layout_height="300dp" >
    </ListView>

</LinearLayout>