<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <!-- 我的收入页底部listview-item布局 -->


    <!-- 内部框 -->

    <LinearLayout
        android:id="@+id/LL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/income_mysales"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TV_OrdersNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.54"
            android:gravity="left"
            android:text="null"
            android:textColor="#000000"
            android:textSize="15sp" />
        <!-- 订单状态 -->

        <TextView
            android:id="@+id/TV_OrdersState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="2"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/income_orderstate"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL1"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/IV_Money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_money" />

        <LinearLayout
            android:id="@+id/LL3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TV_OrdersMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/income_ordersmethod"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/TV_OrdersDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TV_OrdersMethod"
                android:layout_weight="2"
                android:text="@string/income_ordersdate"
                android:textColor="#000000" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

           

            <TextView
                android:id="@+id/TV_OrdersActualPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_weight="2"
                android:text="@string/income_ordersactualprice"
                android:textColor="#000000"
                android:textSize="15sp" />
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/TV_OrdersActualPrice"
                android:text="￥"
                android:textColor="#000000"
                android:textSize="15sp" >
            </TextView>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>