<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context="com.sssoft.Yundian.activity.MyIncomeActivity" >

    <!-- 我的收入页 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF9933"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back" >
        </ImageView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/title_activity_my_income"
            android:textColor="#FFF"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFF" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/LL_List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Top"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/sp_income_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/UI_spacing10" />

        <Spinner
            android:id="@+id/sp_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/UI_spacing10" >
        </Spinner>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/LL_List2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_List"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/AllIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/UI_spacing20"
            android:layout_marginTop="@dimen/UI_spacing10"
            android:layout_weight="1"
            android:text="@string/myincome_income"
            android:textColor="@color/orange"
            android:textSize="@dimen/UI_spacing20" >
        </TextView>

        <TextView
            android:id="@+id/tv_AllIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/UI_spacing20"
            android:layout_marginTop="@dimen/UI_spacing10"
            android:layout_weight="1"
            android:text="@string/myincome_allincome"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_AllIncome"
            android:text="￥"
            android:textColor="#000000"
            android:textSize="20sp" >
        </TextView>
    </RelativeLayout>

    <View
        android:id="@+id/v_line"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_marginTop="@dimen/UI_spacing10"
        android:background="#FF909090" />

    <LinearLayout
        android:id="@+id/LL_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v_line"
        android:layout_marginBottom="@dimen/UI_spacing5"
        android:layout_marginLeft="@dimen/UI_spacing5"
        android:layout_marginRight="@dimen/UI_spacing5"
        android:layout_marginTop="@dimen/UI_spacing5"
        android:background="@color/gray"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/accountLV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/listview_type" >
        </ListView>
    </LinearLayout>

</LinearLayout>